# jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
config/: config.yaml
docker/: docker-compose.yml
src/: __init__.py  base.py  config.py  logging.py
src/analytics/: __init__.py  anomaly_detector.py  behavioral_profiler.py  route_clustering.py  trajectory_predictor.py
src/api/: __init__.py  main.py
src/dashboard/: __init__.py  app.py
src/database/: __init__.py  models.py  queries.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_create_cameras_vehicles_detections.py  002_add_hnsw_index.py
src/ingestion/: __init__.py  camera_manager.py  frame_buffer.py  stream_handler.py
src/llm/: __init__.py  cache.py  engine.py  functions.py  rag.py  validator.py
src/perception/: __init__.py  _utils.py  _yolo.py  perception_pipeline.py  plate_detector.py  plate_ocr.py  vehicle_detector.py
src/tracking/: __init__.py  cross_camera.py  identity_graph.py  reid_embedder.py  single_camera.py
tests/: conftest.py  test_base.py  test_config.py  test_database.py  test_ingestion.py  test_logging.py  test_perception.py  test_session.py  test_tracking.py
